# JolTax

./: .gitignore  GEMINI.md  README.md  USAGE.md  pyproject.toml
joltax/: __init__.py  constants.py  joltree.py  tree.py
taxatree/: tree.py
tests/: test_tree.py
